Changes to be committed: WTF is this? 	modified:   .gitignore 	new file:   build.gradle.kts 	new file:   gradle/gradle-daemon-jvm.properties 	deleted:    gradle/libs.versions.toml 	deleted:    msit/build.gradle.kts 	modified:   settings.gradle.kts 	renamed:    msit/src/main/java/com/rrayy/msit/msit.java -> src/main/java/com/rrayy/msit/msit.java 	renamed:    msit/src/main/resources/plugin.yml -> src/main/resources/plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: mission-item
+main: me.rrayy.msit.msit
 version: 1.0
-main: com.rayy.msit
 author: rrayy
 description: mission item plugin
 api-version: 1.21
