--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
-name: mission-item
-main: me.rrayy.msit.msit
+name: Mission-Item
+main: com.rrayy.msit.msit
 version: 1.0
 author: rrayy
 description: mission item plugin
-api-version: 1.21
+website: https://chzzk.naver.com/64d76089fba26b180d9c9e48a32600d9
+api-version: '1.21'
