Changes to be committed: 플러그인 로더 버그 수정 	modified:   src/main/java/com/rrayy/msit/Loader.java 	modified:   src/main/resources/paper-plugin.yml 	deleted:    src/main/resources/plugin.yml

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,1 +1,19 @@
-loader: org.rrayy.msit.Loader
+name: Mission-Item
+main: com.rrayy.msit.msit
+version: 1.0
+author: rrayy
+description: mission item plugin
+website: https://chzzk.naver.com/64d76089fba26b180d9c9e48a32600d9
+api-version: '1.21'
+loader: com.rrayy.msit.Loader
+dependencies:
+  bootstrap:
+    - name: SomeBootstrapDependency
+      load: BEFORE
+      required: true
+      join-classpath: true
+  server:
+    - name: SomeServerDependency
+      load: AFTER
+      required: true
+      join-classpath: false
